# client-server-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  toolchain.x86_64.cmake
.devcontainer/: Dockerfile  devcontainer.json
cmake/: toolchain.aarch64.cmake
src/: client.cpp  server.cpp
